--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,6 @@
   </head>
   <body>
     <a class="skip-link" href="#main">Pular para o conteudo</a>
-    <canvas id="three-canvas" aria-hidden="true"></canvas>
-
     <div id="app">
       <header class="site-header">
         <div class="brand" aria-label="Infinite Dev">
@@ -22,16 +20,16 @@
           </div>
         </div>
         <nav class="site-nav" aria-label="Navegacao principal">
-          <a href="#vision">Visao</a>
           <a href="#portfolio">Portfolio</a>
           <a href="#pipeline">Pipeline</a>
+          <a href="#links">Links</a>
           <a href="#contact">Contato</a>
         </nav>
         <a class="button ghost" href="#contact">Iniciar projeto</a>
       </header>
 
       <main id="main">
-        <section class="hero reveal" id="vision">
+        <section class="hero reveal">
           <div class="hero-copy">
             <p class="eyebrow">Infinite Dev</p>
             <h1>Experiencias 3D com engenharia real, seguras e prontas para crescer.</h1>
@@ -52,8 +50,8 @@
           <div class="hero-panel">
             <div class="panel-card">
               <div class="panel-header">
-                <h2>Status da cena</h2>
-                <span class="status-pill" id="scene-status">Aguardando assets</span>
+                <h2>Status do projeto</h2>
+                <span class="status-pill">Disponivel</span>
               </div>
               <div class="data-grid">
                 <div class="data-item">
@@ -68,13 +66,6 @@
                   <p class="data-label">Entrega</p>
                   <p class="data-value">Build pronto para deploy</p>
                 </div>
-              </div>
-              <div class="toggle-row">
-                <label class="toggle">
-                  <input type="checkbox" id="reduce-motion" />
-                  <span>Reducao de movimento</span>
-                </label>
-                <p class="toggle-hint">Use quando precisar de menos animacoes.</p>
               </div>
             </div>
           </div>
@@ -129,7 +120,28 @@
           </ol>
         </section>
 
-        <section class="section contact reveal delay-3" id="contact">
+        <section class="section reveal delay-3" id="links">
+          <div class="section-header">
+            <h2>Redirecionamentos</h2>
+            <p>Espacos prontos para enviar visitantes para outras paginas. Envie os links quando estiverem prontos.</p>
+          </div>
+          <div class="card-grid link-grid">
+            <a class="card link-card" href="#" aria-disabled="true">
+              <h3>Pagina externa 01</h3>
+              <p>Aguardando link.</p>
+            </a>
+            <a class="card link-card" href="#" aria-disabled="true">
+              <h3>Pagina externa 02</h3>
+              <p>Aguardando link.</p>
+            </a>
+            <a class="card link-card" href="#" aria-disabled="true">
+              <h3>Pagina externa 03</h3>
+              <p>Aguardando link.</p>
+            </a>
+          </div>
+        </section>
+
+        <section class="section contact reveal delay-4" id="contact">
           <div class="section-header">
             <h2>Contato</h2>
             <p>Fale direto com o time tecnico. Resposta rapida e fluxo seguro.</p>
@@ -147,6 +159,12 @@
               <div class="info-card">
                 <h3>Stack operacional</h3>
                 <p>Node.js + Express, validacao com Zod e headers de seguranca via Helmet.</p>
+              </div>
+              <div class="info-card">
+                <h3>Contato direto</h3>
+                <p>
+                  Telefone: <a class="contact-link" href="tel:7599812348">75 9 9812348</a>
+                </p>
               </div>
             </div>
             <form class="contact-form" id="contact-form" novalidate>
@@ -183,16 +201,6 @@
         <p>Infinite Dev. Engenharia criativa e segura.</p>
         <p>Pronto para portfolio 3D, pronto para producao.</p>
       </footer>
-    </div>
-
-    <div class="scene-loader" id="scene-loader" role="status" aria-live="polite">
-      <div class="loader-label">Cena 3D</div>
-      <progress class="loader-bar" id="scene-progress" max="100" value="0"></progress>
-      <span class="loader-text" id="scene-loader-text">Carregando 0%</span>
-    </div>
-
-    <div class="webgl-fallback" id="webgl-fallback" role="status" aria-live="polite">
-      <p>WebGL indisponivel. O site segue funcional, mas sem visual 3D.</p>
     </div>
 
     <noscript>Ative o JavaScript para ver a experiencia completa.</noscript>
